# drivers-orogen-xsens_imu

./: CMakeLists.txt  imu.orogen  manifest.xml  xsens_imu.orogen
scripts/: test.rb
tasks/: CMakeLists.txt  IMUAcquisition.cpp  IMUAcquisition.hpp  OrientationAcquisition.cpp  OrientationAcquisition.hpp  Task.cpp  Task.hpp  XsensTask.cpp  XsensTask.hpp
