include(imuTaskLib)
ADD_LIBRARY(${IMU_TASKLIB_NAME} SHARED 
    ${IMU_TASKLIB_SOURCES})

add_dependencies(${IMU_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${IMU_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${IMU_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${IMU_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${IMU_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${IMU_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${IMU_TASKLIB_HEADERS}
    DESTINATION include/orocos/imu)

