include(xsens_imuTaskLib)
ADD_LIBRARY(${XSENS_IMU_TASKLIB_NAME} SHARED 
    ${XSENS_IMU_TASKLIB_SOURCES})

pkg_check_modules(SAMPLE_AGGREGATOR REQUIRED aggregator)
include_directories(${SAMPLE_AGGREGATOR_INCLUDE_DIRS})
link_directories(${SAMPLE_AGGREGATOR_LIBRARY_DIRS})

add_dependencies(${XSENS_IMU_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${XSENS_IMU_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${XSENS_IMU_TASKLIB_DEPENDENT_LIBRARIES}
    ${SAMPLE_AGGREGATOR_LIBRARIES})
SET_TARGET_PROPERTIES(${XSENS_IMU_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${XSENS_IMU_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${XSENS_IMU_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${XSENS_IMU_TASKLIB_HEADERS}
    DESTINATION include/orocos/xsens_imu)

